Begin working on GPU, need to test to see if making a diffrence

--- a/Stage A.ipynb
+++ b/Stage A.ipynb
@@ -2,11 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -14,6 +9,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
+    "import time \n",
     "from IPython import display\n",
     "\n",
     "df = pd.read_csv('data_generation/data/transfer_data.csv')\n",
@@ -32,16 +28,29 @@
     "data_Labels = df_Labels.values\n",
     "\n",
     "# Fit and transform the features\n",
-    "\n",
-    "\n",
-    "\n",
-    "#X = torch.from_numpy(X).type(torch.float)\n",
-    "#y = torch.from_numpy(y).type(torch.float)\n",
-    "#tensor_Features = torch.tensor(data_Features, dtype=torch.float32)\n",
-    "#tensor_Labels   = torch.tensor(data_Labels  , dtype=torch.float32)\n",
     "X = torch.from_numpy(data_Features).type(torch.float)\n",
-    "y = torch.from_numpy(data_Labels).type(torch.float)"
-   ]
+    "y = torch.from_numpy(data_Labels).type(torch.float)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "######### CHEcking state of GPU \n",
+    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "\n",
+    "# Check PyTorch has access to MPS (Metal Performance Shader, Apple's GPU architecture)\n",
+    "print(f\"Is MPS (Metal Performance Shader) built? {torch.backends.mps.is_built()}\")\n",
+    "print(f\"Is MPS available? {torch.backends.mps.is_available()}\")\n",
+    "\n",
+    "# Set the device      \n",
+    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "device = \"cpu\"\n",
+    "print(f\"Using device: {device}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "initial_id",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -60,7 +69,7 @@
     "len(X_train),len(X_test),len(y_train),len(y_test)\n",
     "#y_train = torch.unsqueeze(y_train, dim=1)\n",
     "#y_test = torch.unsqueeze(y_test, dim=1)\n",
-    "X_train.shape,X_test.shape,y_train.shape,y_test.shape\n"
+    "X_train.shape,X_test.shape,y_train.shape,y_test.shape"
    ],
    "metadata": {
     "collapsed": false
@@ -77,20 +86,23 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class Model_0v1(nn.Module):\n",
+    "    n = 150\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.layer1=nn.Linear(in_features=4,out_features=32)\n",
-    "        self.layer2=nn.Linear(in_features=32,out_features=3)\n",
-    "        self.relu = nn.ReLU()\n",
+    "        self.layer1=nn.Linear(in_features=4,out_features=n)\n",
+    "        self.layer2=nn.Linear(in_features=n,out_features=n)\n",
+    "        self.layer3=nn.Linear(in_features=n,out_features=n)\n",
+    "        self.layer4=nn.Linear(in_features=n,out_features=3)\n",
+    "        self.relu = nn.Softshrink()\n",
     "        \n",
     "    def forward(self,x):\n",
     "        #return self.layer3(self.relu(self.layer2(self.relu(self.layer1(x)))))\n",
-    "        return self.layer2(self.relu(self.layer1(x)))\n",
+    "        return self.layer4(self.relu(self.layer3(self.relu(self.layer2(self.relu(self.layer1(x)))))))\n",
     "\n",
     "torch.manual_seed(42)\n",
     "#create an instance of the mdoel \n",
     "model_01 = Model_0v1()\n",
-    "model_01.state_dict()"
+    "model_01.state_dict()\n"
    ],
    "metadata": {
     "collapsed": false
@@ -102,7 +114,9 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "model_01\n"
+    "print(f\"Model on device:\\n{next(model_01.parameters()).device}\")\n",
+    "X_test.to(device)\n",
+    "print(f\"DATA on device:\\n{X_test.device}\")"
    ],
    "metadata": {
     "collapsed": false
@@ -128,6 +142,7 @@
     "optomizer = torch.optim.SGD(params = model_01.parameters(),\n",
     "                            lr = 0.05) #lr = learning rate\n",
     "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -140,56 +155,83 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "import torch\n",
+    "import torch.optim as optim\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Set random seed for reproducibility\n",
     "torch.manual_seed(42)\n",
-    "epochs = 10\n",
     "\n",
-    "plt.figure()\n",
+    "# Assuming X_train, y_train, X_test, y_test are already on CPU\n",
+    "X_train = X_train.to(device)\n",
+    "y_train = y_train.to(device)\n",
+    "X_test = X_test.to(device)\n",
+    "y_test = y_test.to(device)\n",
     "\n",
+    "# Assuming model_01, loss_fn, optimizer are already defined\n",
+    "# Move model and optimizer to GPU\n",
+    "model_01 = model_01.to(device)\n",
+    "#optimizer = optomizer.to(device)\n",
+    "\n",
+    "# Number of epochs\n",
+    "epochs = 10000\n",
+    "\n",
+    "# Lists to store losses\n",
     "losses = []\n",
     "test_losses = []\n",
     "epochs_array = []\n",
     "\n",
+    "start_time = time.time()\n",
     "\n",
     "\n",
+    "# Training loop\n",
     "for epoch in range(epochs):\n",
     "    epochs_array.append(epoch)\n",
     "    model_01.train() \n",
-    "    # 1 forward pass \n",
-    "    y_preds = model_01(X_train)\n",
-    "    # 2 calculate the loss \n",
-    "    loss = loss_fn(y_preds,y_train)\n",
-    "    losses.append(loss.item())\n",
-    "    # 3 optomizer zero grad \n",
-    "    optomizer.zero_grad()\n",
-    "    # 4 perfrom back propogation on the loss with respect to the parameters of the model \n",
-    "    loss.backward()\n",
-    "    # 5. step the optimizer (perform gradeint descent )\n",
-    "    optomizer.step() # by deful how the optimzer changes will acculumate through the loop so we have to zero them above in step 3\n",
-    "    #TESTING\n",
-    "    model_01.eval() #tunrs off diffrence setting sin th emodel not needed evaluating/testing\n",
     "    \n",
-    "    with torch.inference_mode():\n",
-    "        # 1. forward \n",
-    "        test_pred = model_01(X_test)\n",
-    "        #2. lest \n",
-    "        test_loss = loss_fn(test_pred,y_test)\n",
+    "    # Forward pass\n",
+    "    y_preds = model_01(X_train)\n",
+    "    \n",
+    "    # Calculate the loss\n",
+    "    loss = loss_fn(y_preds, y_train)\n",
+    "    losses.append(loss.item())\n",
+    "    \n",
+    "    # Zero gradients\n",
+    "    optomizer.zero_grad()\n",
+    "    \n",
+    "    # Backward pass\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # Step the optimizer (perform gradient descent)\n",
+    "    optomizer.step()\n",
+    "    \n",
+    "    # Testing\n",
+    "    model_01.eval()\n",
+    "    \n",
+    "    with torch.no_grad():  # Ensure no gradients are computed\n",
+    "        # Forward pass for testing\n",
+    "        test_preds = model_01(X_test)\n",
+    "        \n",
+    "        # Calculate test loss\n",
+    "        test_loss = loss_fn(test_preds, y_test)\n",
     "        test_losses.append(test_loss.item())\n",
     "    \n",
+    "    if epoch % 5 == 0:\n",
+    "        print(f\"Status: {epoch * 100 / epochs}% | Epoch: {epoch} | Training Loss: {loss:.8f} | Test Loss: {test_loss:.8f}\")\n",
     "\n",
-    "    if epoch%100==0:\n",
-    "        #print(f\"Loss: {y_preds}\")\n",
-    "        print(f\" Status : {epoch*100/epochs}%  Epoch: {epoch} | Test: {loss} | Test loss: {test_loss}\")\n",
     "\n",
-    "    \n",
-    "plt.plot(epochs_array,losses, label='Training Loss')\n",
-    "plt.plot(epochs_array,test_losses, label='Test Loss')\n",
+    "print(f\"Training took : {time.time()-start_time}\")\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure()\n",
+    "plt.plot(epochs_array, losses, label='Training Loss')\n",
+    "plt.plot(epochs_array, test_losses, label='Test Loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
     "plt.title('Training Loss Curve')\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "    \n",
+    "\n",
     "    \n",
     "    "
    ],
@@ -203,7 +245,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#making estimations \n",
+    "##making estimations \n",
     "model_01.eval() #tunrs off diffrence setting sin th emodel not needed evaluating/testing\n",
     "with torch.inference_mode():\n",
     "    y_preds = model_01(X_test)\n"
@@ -251,8 +293,8 @@
     "\n",
     "# Set labels and title\n",
     "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Magnitude')\n",
-    "plt.title('Scatter Plot of Magnitudes')\n",
+    "plt.ylabel('Magnitude of velocity [km/s]')\n",
+    "plt.title('Scatter Plot of Magnitudes Scaled back')\n",
     "plt.legend()\n"
    ],
    "metadata": {
@@ -271,9 +313,11 @@
     "\n",
     "# Set labels and title\n",
     "plt.xlabel('Epochs')\n",
-    "plt.ylabel('Magnitude')\n",
-    "plt.title('Scatter Plot of Magnitudes')\n",
-    "plt.legend()"
+    "plt.ylabel('Magnitude of velocity [km/s]')\n",
+    "plt.title('Scatter Plot of Magnitudes unscaled')\n",
+    "plt.legend()\n",
+    "\n",
+    "save"
    ],
    "metadata": {
     "collapsed": false
@@ -284,7 +328,29 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "#saving a model in pytorch\n",
+    "\n",
+    "from pathlib    import Path \n",
+    "# create models directory \n",
+    "MODEL_PATH = Path(\"models\")\n",
+    "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+    "#create model save path \n",
+    "MODEL_NAME= \"LeakyRelu.pth\"\n",
+    "MODEL_SAVE_PATH = MODEL_PATH/MODEL_NAME\n",
+    "print(f\"Saving model to : {MODEL_SAVE_PATH}\") \n",
+    "\n",
+    "#3. SAVE THE MODEL SAVE DICT \n",
+    "torch.save(obj=model_01.state_dict(),f=MODEL_SAVE_PATH)\n",
+    "\n",
+    "## Loading the model of just the state dict \n",
+    "#new instance of the linear regression model class \n",
+    "#loaded_model_0 = LinearRegressionModel()\n",
+    "#load the saved state_dict of model_0 into the new instance \n",
+    "#loaded_model_0.load_state_dict(torch.load(MODEL_SAVE_PATH))\n",
+    "\n",
+    "#print(loaded_model_0.state_dict())"
+   ],
    "metadata": {
     "collapsed": false
    },
